[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/Jump_Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/BloodstainPersonalUseBold-1GM30.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="Game_Over" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -447.0
margin_top = -180.0
margin_right = 1746.0
margin_bottom = 975.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 250.0
margin_top = 100.0
margin_right = 750.0
margin_bottom = 300.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Title"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump1" type="Button" parent="."]
margin_left = 115.614
margin_top = 318.533
margin_right = 306.614
margin_bottom = 422.533
text = "Double Jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump2" type="Button" parent="."]
margin_left = 409.726
margin_top = 311.807
margin_right = 613.726
margin_bottom = 418.807
text = "High jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump3" type="Button" parent="."]
margin_left = 722.178
margin_top = 312.066
margin_right = 900.178
margin_bottom = 425.066
text = "Glider"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Jump1" to="." method="_on_Jump1_pressed"]
[connection signal="pressed" from="Jump2" to="." method="_on_Jump2_pressed"]
[connection signal="pressed" from="Jump3" to="." method="_on_Jump3_pressed"]
